--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4875,7 +4875,7 @@ a.badge:focus {
     font-weight: 200;
 }
 .jumbotron > hr {
-    border-top-color: #d5d5d5;
+    border-top-color: #31b0d5;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
