--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    background-image: url(../img/Textura.gif);
+    background-image: url(../img/tex4.jpg);
     background-repeat: repeat;
 }
 
